# django-processinfo

./: .gitignore  .isort.cfg  .project  AUTHORS  LICENSE  MANIFEST.in  Makefile  README.creole  README.md  README.rst  manage.py  manage.sh  pyproject.toml  pytest.ini  setup.py
.github/workflows/: pythonapp.yml
django_processinfo/: __init__.py  admin.py  app_settings.py  apps.py  middlewares.py  models.py  publish.py  test_settings.py  version.py
django_processinfo/middlewares/: django_processinfo.py
django_processinfo/migrations/: 0001_initial.py  0002_auto_20180309_1608.py  0003_auto_20201102_0844.py  0004_auto_20201209_1313.py
django_processinfo/templates/admin/django_processinfo/: change_form.html  change_list.html
django_processinfo/templates/django_processinfo/: timesince.html
django_processinfo/templates/django_processinfo/includes/: admin_breadcrumbs.html
django_processinfo/tests/: __init__.py  test_admin.py  test_lint.py  test_project_setup.py
django_processinfo/tests/django_project/: settings.py
django_processinfo/utils/: average.py  human_time.py  proc_info.py  timesince.py
django_processinfo_tests/: test_admin.py  test_lint.py  test_project_setup.py
django_processinfo_tests/django_project/: __init__.py  manage.py  settings.py  urls.py
